/* -------------------------------------------------------------------------- *\
 *             Apache 2.0 License Copyright © 2022 The Aurae Authors          *
 *                                                                            *
 *                +--------------------------------------------+              *
 *                |   █████╗ ██╗   ██╗██████╗  █████╗ ███████╗ |              *
 *                |  ██╔══██╗██║   ██║██╔══██╗██╔══██╗██╔════╝ |              *
 *                |  ███████║██║   ██║██████╔╝███████║█████╗   |              *
 *                |  ██╔══██║██║   ██║██╔══██╗██╔══██║██╔══╝   |              *
 *                |  ██║  ██║╚██████╔╝██║  ██║██║  ██║███████╗ |              *
 *                |  ╚═╝  ╚═╝ ╚═════╝ ╚═╝  ╚═╝╚═╝  ╚═╝╚══════╝ |              *
 *                +--------------------------------------------+              *
 *                                                                            *
 *                         Distributed Systems Runtime                        *
 *                                                                            *
 * -------------------------------------------------------------------------- *
 *                                                                            *
 *   Licensed under the Apache License, Version 2.0 (the "License");          *
 *   you may not use this file except in compliance with the License.         *
 *   You may obtain a copy of the License at                                  *
 *                                                                            *
 *       http://www.apache.org/licenses/LICENSE-2.0                           *
 *                                                                            *
 *   Unless required by applicable law or agreed to in writing, software      *
 *   distributed under the License is distributed on an "AS IS" BASIS,        *
 *   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. *
 *   See the License for the specific language governing permissions and      *
 *   limitations under the License.                                           *
 *                                                                            *
\* -------------------------------------------------------------------------- */

syntax = "proto3";

package runtime;

import "meta.proto";

/// Runtime is a synchronous and immediate subsystem.
//  Use the Runtime subsystem to start and stop executables, containers, and instances.
service Runtime {

  rpc ExecutableStart(Executable) returns (ExecutableStatus) {}
  rpc ExecutableStop(Executable) returns (ExecutableStatus) {}

  rpc ContainerStart(Container) returns (ContainerStatus) {}
  rpc ContainerStop(Container) returns (ContainerStatus) {}

  rpc InstanceStart(Instance) returns (InstanceStatus) {}
  rpc InstanceStop(Instance) returns (InstanceStatus) {}

}

message Executable {
  repeated meta.AuraeMeta meta = 1;

  /// Command resembles systemd's ExecStart. This is the shell command (with arguments) you intend to execute.
  repeated string command = 3;

  /// Comment is an arbitrary (user defined) comment used to identify the Executable at runtime.
  string comment = 4;
}

message ExecutableStatus {
  repeated meta.AuraeMeta meta = 1;
  repeated meta.ProcessMeta proc = 2;
  repeated meta.Status status = 3;
}

message Container {
  repeated meta.AuraeMeta meta = 1;
  string name = 2;
  string image = 3;
}

message ContainerStatus {
  repeated meta.AuraeMeta meta = 1;
  repeated meta.ProcessMeta proc = 2;
  repeated meta.Status status = 3;
}

message Instance {
  repeated meta.AuraeMeta meta = 1;
  string name = 2;
  string image = 3;
}

message InstanceStatus {
  repeated meta.AuraeMeta meta = 1;
  repeated meta.Status status = 2;
}

message InstanceMeta {
  repeated meta.AuraeMeta meta = 1;
}

message InstanceMetaStatus {
  repeated meta.AuraeMeta meta = 1;
  repeated meta.Status status = 2;
}